--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+main {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-cont {
+  margin: 22px 0;
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#SearchForm {
+  display: flex;
+  gap: 7px;
+}
+#SearchInput {
+  padding: 5px 20px;
+  height: 45px;
+  font-family: 'Pretendard';
+  font-size: 20px;
+  border: 2px solid grey;
+  border-radius: 25px;
+  transition: all .3s;
+}
+#SearchInput:focus {
+  transform: scale(1.3);
+}
+#SearchInput:focus + #SearchBtn {
+  display: none;
+}
+#SearchBtn {
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  font-size: 16px;
+  color: #fff;
+  line-height: 44px;
+  background-color: grey;
+  border-radius: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cont {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  top: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.rankcont {
   display: flex;
   flex-direction: column;
+  padding: 20px;
+  gap: 17px;
+  white-space: nowrap;
+}
+.rankcont li {
+  cursor: pointer;
+  height: 50px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 5px;
+  border: 2px solid #ebebeb;
+  padding: 15px 13px;
+  transition: all .3s;
+}
+.rankcont li:hover {
+  background-color: #444;
+  color: #fff;
+  border: none;
+  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.104);
+  transform: scale(1.3);
+}
+.rankcont li:hover .rankKeyword{
+  font-size: 20px;
+  font-weight: 800;
 }
 
-.App-link {
-  color: #61dafb;
+.rankNum {
+  display: inline-block;
+  width: 40px;
+  font-size: 17px;
+  color: #b1b1b1;
+  text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rankKeyword {
+  display: inline-block;
+  width: 194px;
+  font-size: 19px;
+  font-weight: 500;
+  word-break: keep-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
